--- a/ilchess/history.txt
+++ b/ilchess/history.txt
@@ -1,1 +1,1 @@
-[['1. ', 'Nf3', 'Nf6'], ['2. ', 'Ng5', 'Ng4'], ['3. ', 'Ne4', 'Ne5'], ['4. ', 'N4c3']]
+['e4', 'd5', 'exd5', 'c6', 'dxc6', 'bxc6', 'd4', 'Ba6', 'd5', 'cxd5', 'Bb5+']
